# CrewLine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GUIDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
projects/example_project/: README.md  app.py
tests/: test_file_tools.py  test_main.py
tools/: __init__.py  file_tools.py
