[project]
name = "crewline"
version = "0.1.0"
description = "Zero-code AI dev team: configure agents in YAML, point at any project, get code + review + tests. Powered by CrewAI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "crewai>=1.12.0",
    "anthropic>=0.86.0",
    "langchain-anthropic>=0.3.0",
    "litellm>=1.81.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
